--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,17 +1,12 @@
 //=== COLORS ===
 $body-bg-color: #ffffff;
-$theme-color: #2F2F2F;
+$theme-color: #519392;
+$yellow: #F5CE47;
 $bg-color: #0F1210;
-$yellow-color: #F2D589;
-$red-color: #FF5F68;
-$green-color: #46A59B;
-$white: #fff;
 $black: #000;
-$maroon: #83333e; 
-$off-white: #f2f5f5;
 
 //=== FONTS ===
-$font: "Helvetica Neue",-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
+$font: 'Nunito',-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 $headline-font: atrament-web, sans-serif; 
 $text-font: Helvetica Neue, sans-serif;
 
