--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -1,3 +1,10 @@
 .about{
-    margin-top: 30px;
+    margin-top: 50px;
+    h2{
+    text-align: center;
+    }
+    p{
+        margin-top: 20px;
+        line-height: 1.5;
+    }
 }
