--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     &__wrapper{
         padding: 60px 0 40px;
+        margin-top: 70px;
         color: #000;
         font-weight: 300;  
         @include spandtb{
@@ -9,6 +10,12 @@
         @include sp{
             padding: 20px 0 10px;
         }
+    }
+    &__follow{
+        font-size: 1.3rem;
+        text-align: center;
+        font-weight: bold;
+        // text-decoration: underline;
     }
     &__nav{
         &List{
@@ -55,7 +62,7 @@
         color: #bcbcbc;
         @include sp{
             margin-right: 10px;
-            font-size: 1.3rem;
+            font-size: 0.5rem;
         }
     }
 }
