--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,12 @@ ul{
     list-style-type: none;
 }
 
+a{
+    &:hover{
+        opacity: 0.6;
+    }
+}
+
 .contentWrapper{
     @include content-wrapper;
     @include sp{
@@ -59,12 +65,15 @@ ul{
     }
     &__desc{
         text-align: center;
+        margin-top: 150px;
+        margin-bottom: 170px;
         h2{
-            font-size: 1.9rem;
+            font-size: 2.2rem;
         }
         p{
-            font-size: 0.9rem;
-            margin-top: 10px;
+            font-size: 1rem;
+            margin-top: 30px;
+            text-decoration: underline;
         }
     }
 }
