--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,11 +3,16 @@
 @import "partials/works";
 @import "partials/about";
 @import "partials/ress";
+@import "partials/header";
 @import "partials/footer";
 
-html, body{
+html{
+    font-size: 62.5%;
+}
+
+body{
     font-family: $font;
-    font-size: 16px;
+    font-size: 1.6rem;
     scroll-behavior: smooth;
 }
 
@@ -27,161 +32,3 @@ a{
         @include content-wrapper--sp;
     }
 }
-
-.header{
-    height: 80px;
-    width:100%;
-    position:absolute;
-    top:0px;
-    z-index: 10;
-    &__wrapper{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 80px;
-    }
-    &__logo{
-        width: 50px;
-        height: 50px;
-        a{
-            font-weight: 700;
-            text-decoration: none;
-            letter-spacing: 1.5px;
-            color: $black;
-        }
-    }
-    &__nav{
-        padding-right: 10px;
-        a{
-            margin: 0 20px;
-            text-decoration: none;
-            letter-spacing: 1.75px;
-            text-transform: uppercase;
-            font-size: 0.7rem;
-            color: $black;
-            &:last-child{
-                margin-right: 0;
-            }
-        }
-    }
-    &__gnav{
-        display: inline;
-        font-size: 2.4rem;
-        letter-spacing: 1.5px;
-        padding: 30px 0 10px;
-        &List{
-        display: flex;
-        }
-    &Item{
-        a{
-            font-size: 0.7rem;
-            outline:none;
-        }
-    }
-    }
-    &__desc{
-        text-align: center;
-        margin-top: 190px;
-        margin-bottom: 210px;
-        h2{
-            font-size: 2.2rem;
-        }
-        p{
-            font-size: 1rem;
-            margin-top: 30px;
-            text-decoration: underline;
-        }
-    }
-}
-
-.bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    left: 36px;
-    top: 46px;
-    display: block;
-    @include pc{    
-        display: none;
-    }
-    @include tb{
-        top:42px;
-    }
-    @include sp{
-        width: 34px;
-        height: 28px;
-        top: 38px;
-        left: 27px;
-    }
-  }
-
-.bm-burger-bars {
-    background: #000;
-    border-radius: 30px;
-    height: 4px!important;
-}
-  
-.bm-burger-bars-hover {
-    background: #000;
-}
-
-  .bm-cross-button {
-    height: 26px;
-    width: 26px;
-  }
-
-  .bm-cross {
-    background: #bdc3c7;
-  }
-
-  .bm-menu-wrap {
-    position: fixed;
-    height: 100%;
-    top: 0;
-    @include sp{
-        width: 50%!important;
-    }
-  }
-  
-  .bm-menu {
-    background: #fff;
-    padding: 2.5em 0;
-    font-size: 2.5rem;
-    width: 100%;
-  }
-  
-  .bm-morph-shape {
-    fill: #fff;
-  }
-
-  .bm-item-list {
-    color: #b8b7ad;
-    padding: 0.8rem;
-    padding-right: 4rem;
-  }
-
-  .bm-item {
-    display: inline-block;
-  }
-
-  .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
-    top: 0;
-  }
-
-//typing js
-
-.ml16 {
-    color: $black;
-    padding: 40px 0;
-    font-weight: 800;
-    font-size: 2em;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    overflow: hidden;
-  }
-  
-  .ml16 .letter {
-    display: inline-block;
-    line-height: 1em;
-  }
