add:name animation with css

--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -1,7 +1,8 @@
 .works{
-    margin-top: 70px;
+    margin-top: 90px;
     h2{
         text-align: center;
+        padding-top: 20px;
     }
     &__list{
         margin-top: 20px;
