--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -7,10 +7,9 @@
         height: 80px;
     }
     &__logo{
-        width:70px;
+        width:50px;
         @include sp{
         width: 50px;
-        height: 50px;
         }
         a{
             font-weight: 700;
@@ -28,8 +27,44 @@
             text-transform: uppercase;
             font-size: 1.3rem;
             color: $black;
+            position: relative;
+            padding-bottom: 8px;
             &:last-child{
                 margin-right: 0;
+            }
+            &:before,
+            &:after{
+              content: '';
+              position: absolute;
+              bottom: 2px;
+              left: 0;
+              right: 0;
+              height: 2px;
+              background-color: $black;
+            }
+            &:before{
+              opacity: 0;
+              transform: translateY(-$distance);
+              transition: transform 0s $easeOutBack, opacity 0s;
+            }
+            &:after{
+              opacity: 0;
+              transform: translateY($distance/2);
+              transition: transform $duration $easeOutBack, opacity $duration;
+            }
+            &:hover,
+            &:focus{
+              &:before,
+              &:after{
+                opacity: 1;
+                transform: translateY(0);
+              }
+              &:before{
+                transition: transform $duration $easeOutBack, opacity $duration;
+              }
+              &:after{
+                transition: transform 0s $duration $easeOutBack, opacity 0s $duration;
+              }
             }
         }
     }
@@ -70,11 +105,58 @@
     }
     &__baby{
       margin: auto;
-      width: 300px;
+      width: 325px;
       @include sp{
         width: 200px;
       }
     }
+    &__name{
+      padding-left: 7px;
+      span{
+        position: relative;
+        color: transparent;
+        &::before{
+          content:attr(data-content);
+          position: absolute;
+          top: -30px;
+          color: transparent;
+          text-shadow: none;
+          transition: 0.6s ease;
+          animation: falls 1s ease forwards;
+          color: $black;
+                }
+        &:nth-of-type(1){
+          &::before{
+            animation: falls 0.9s ease 0.2s forwards;
+          }
+        }
+        &:nth-of-type(2){
+          &::before{
+            animation: falls 1s ease 0.3s forwards;
+          }
+        }
+        &:nth-of-type(3){
+          &::before{
+            animation: falls 1.1s ease 0.4s forwards;
+          }
+        }
+        &:nth-of-type(4){
+          &::before{
+            animation: falls 1.2s ease 0.5s forwards;
+          }
+        }
+      }
+    }
+}
+
+@keyframes falls{
+  0%{
+    top: -30px;
+  }
+  100%{
+    opacity: 1;
+    top: 0;
+  }
 }
 
 .bm-burger-button {
@@ -150,21 +232,4 @@
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
     top: 0;
-  }
-
-//typing js
-
-.ml16 {
-    color: $black;
-    padding: 40px 0;
-    font-weight: 800;
-    font-size: 2.6rem;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    overflow: hidden;
-  }
-  
-  .ml16 .letter {
-    display: inline-block;
-    line-height: 1em;
   }
