add:css animation to header

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -19,7 +19,7 @@
     }
     &__nav{
         &List{
-            margin-left: 100px;
+            margin: auto;
             font-size: 3.9rem;
             display: flex;
             width: 350px;
