--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,15 +1,22 @@
 .header{
     margin-top: 20px;
+    position: relative;
     &__wrapper{
         display: flex;
         align-items: center;
         justify-content: space-between;
         height: 80px;
+        position: fixed;
+        width: 800px;
+        z-index: 3;
+        top: 50px;
+        left: 50%;
+        transform:translate(-50%, -50%)
     }
     &__logo{
-        width:50px;
+        width:30px;
         @include sp{
-        width: 50px;
+        width: 20px;
         }
         a{
             font-weight: 700;
@@ -84,8 +91,8 @@
     }
     }
     &__desc{
-        margin-top: 150px;
-        margin-bottom: 170px;
+        padding-top: 210px;
+        margin-bottom: 230px;
         display: flex;
         text-align: center;
         align-items: center;
@@ -100,7 +107,10 @@
         p{
             font-size: 1.5rem;
             margin-top: 30px;
-            text-decoration: underline;
+            text-decoration: underline; 
+            animation: down 1s ease 1.2s forwards;
+            opacity: 0;  
+            position: relative;
         }
     }
     &__baby{
@@ -117,6 +127,7 @@
         color: transparent;
         &::before{
           content:attr(data-content);
+          opacity: 0;
           position: absolute;
           top: -30px;
           color: transparent;
@@ -127,28 +138,37 @@
                 }
         &:nth-of-type(1){
           &::before{
-            animation: falls 0.9s ease 0.2s forwards;
+            animation: falls 0.7s ease 0.4s forwards;
           }
         }
         &:nth-of-type(2){
           &::before{
-            animation: falls 1s ease 0.3s forwards;
+            animation: falls 0.8s ease 0.5s forwards;
           }
         }
         &:nth-of-type(3){
           &::before{
-            animation: falls 1.1s ease 0.4s forwards;
+            animation: falls 0.9s ease 0.6s forwards;
           }
         }
         &:nth-of-type(4){
           &::before{
-            animation: falls 1.2s ease 0.5s forwards;
+            animation: falls 1.0s ease 0.7s forwards;
           }
         }
       }
     }
 }
-
+@keyframes down {
+  0% {
+      opacity:  0;
+      top: 50px;
+  }
+  100% {
+      opacity:  1;
+      top: 0;
+  }
+}
 @keyframes falls{
   0%{
     top: -30px;
