--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -15,7 +15,7 @@
         font-size: 1.9rem;
         text-align: center;
         font-weight: bold;
-        // text-decoration: underline;
+        margin-bottom: 30px;
     }
     &__nav{
         &List{
@@ -57,8 +57,12 @@
     }
     &__copy{
         text-align: right;
+        margin-top: 30px;
         margin-right: 40px;
+        margin-bottom: 20px;
         color: #bcbcbc;
+        position: absolute;
+        right: 0;
         @include sp{
             margin-right: 10px;
             font-size: 1rem;
