--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,6 +22,8 @@ ul{
 
 a{
     transition: 0.5s;
+    color: $black;
+    text-decoration: none;
 }
 
 .contentWrapper{
@@ -30,3 +32,24 @@ a{
         @include content-wrapper--sp;
     }
 }
+
+@keyframes down {
+    0% {
+        opacity:  0;
+        top: 30px;
+    }
+    100% {
+        opacity:  1;
+        top: 0;
+    }
+  }
+
+@keyframes falls{
+    0%{
+      top: -30px;
+    }
+    100%{
+      opacity: 1;
+      top: 0;
+    }
+  }
