add:react-reveal,update:some style

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -12,6 +12,7 @@
         }
     }
     &__follow{
+        letter-spacing: $spacing;
         font-size: 1.9rem;
         text-align: center;
         font-weight: bold;
