--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,7 +12,11 @@ $text-font: Helvetica Neue, sans-serif;
 
 //=== SIZES ===
 $content-width: 960px;
+
+//=== ANIMATION ===
 $duration: .2s;
 $distance: 8px;
 $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
 
+//=== LETTER ===
+$spacing: 1.75px;
