--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -1,8 +1,6 @@
 .works{
     margin-top: 90px;
     h2{
-        text-align: center;
-        padding-top: 20px;
         margin-bottom: 50px;
     }
     &__list{
@@ -13,7 +11,7 @@
         border-radius: 20px;
         padding: 20px;
         text-align: center;
-        margin-top: 30px;
+        margin-top: 80px;
     }
     &__title{
         font-size: 2.3rem;
@@ -31,7 +29,7 @@
             border:2px solid $yellow;
             margin: 5px;
             padding: 2px 7px 3px;
-            border-radius: 5px;
+            // border-radius: 5px;
             font-size: 1.4rem;
         }
     }
@@ -47,6 +45,10 @@
         height: 300px;
         overflow: hidden;
         display: block;
+        @include sp {
+            width: 100%;
+            height: auto;
+        }
         img{
             transition: 0.5s!important;
             width: 605px;
@@ -57,6 +59,7 @@
         }
     }
     &__more{
+        letter-spacing: $spacing;
         text-align: center;
         margin-top: 20px;
         a{
