--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -5,13 +5,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: absolute;
         height: 80px;
-        position: fixed;
         width: 950px;
-        z-index: 3;
         @include pc{
           top: 50px;
-          left: 53%;
+          left: 50%;
           transform:translate(-50%, -50%);
         }
         @include tb{
@@ -37,7 +36,7 @@
     &__nav{
         padding-right: 10px;
         a{
-            margin: 0 20px;
+            margin: 0 10px;
             text-decoration: none;
             letter-spacing: $spacing;
             text-transform: uppercase;
