--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -1,7 +1,7 @@
 .works{
-    margin-top: 90px;
+    margin-top: 30px;
     h2{
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
     &__list{
         margin-top: 20px;
@@ -12,6 +12,9 @@
         padding: 20px;
         text-align: center;
         margin-top: 80px;
+        &:first-of-type{
+            margin-top: 20px;
+        }
     }
     &__title{
         font-size: 2.3rem;
@@ -55,23 +58,6 @@
             display: block;
             &:hover{
                 transform: scale(1.05);
-            }
-        }
-    }
-    &__more{
-        letter-spacing: $spacing;
-        text-align: center;
-        margin-top: 20px;
-        a{
-            padding: 12px 10px 10px;
-            color: #fff;
-            background-color: $black;
-            display: inline-block;
-            text-decoration: none;
-            font-size: 1.5rem;
-            @include sp{
-                font-size: 1.2rem;
-                padding: 6px 10px 7px;
             }
         }
     }
