--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -7,7 +7,8 @@
         margin-top: 20px;
     }
     &__item{
-        border: 2px solid $black;
+        // border: 2px solid $black;
+        box-shadow: 0px 0px 10px #e5e5e5, 0 5px 15px #c4c4c4;
         border-radius: 20px;
         padding: 20px;
         text-align: center;
@@ -17,7 +18,8 @@
         }
     }
     &__title{
-        font-size: 2.3rem;
+        font-size: 2.5rem;
+    font-weight: normal;
     }
     &__desc{
         margin-top: 20px;
@@ -32,7 +34,6 @@
             border:2px solid $yellow;
             margin: 5px;
             padding: 2px 7px 3px;
-            // border-radius: 5px;
             font-size: 1.4rem;
         }
     }
