--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -44,6 +44,9 @@
             color: $black;
             position: relative;
             padding-bottom: 8px;
+            @include sp{
+              font-size: 1.2rem;
+            }
             &:last-child{
                 margin-right: 0;
             }
@@ -89,12 +92,20 @@
         align-items: center;
         height: 100vh;
         justify-content: space-between;
+        @include tb{
+          height: 100vh;
+        }
         @include sp{
+          height: 80vh;
           flex-direction: column-reverse;
+          justify-content: center;
         }
         h2{
             font-size: 3rem;
             letter-spacing: $spacing;
+            @include sp{
+              font-size: 2.5rem;
+            }
         }
         p{
             font-size: 1.5rem;
@@ -103,6 +114,9 @@
             animation: down 1s ease 1.2s forwards;
             opacity: 0;  
             position: relative;
+            @include sp{
+              font-size: 1.4rem;
+            }
         }
     }
     &__baby{
