--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -7,19 +7,25 @@
         margin-top: 20px;
     }
     &__item{
-        // border: 2px solid $black;
         box-shadow: 0px 0px 10px #e5e5e5, 0 5px 15px #c4c4c4;
         border-radius: 20px;
-        padding: 20px;
+        padding: 30px 20px;
         text-align: center;
         margin-top: 80px;
         &:first-of-type{
             margin-top: 20px;
         }
+        @include sp{
+            padding: 30px 15px;
+            margin-top: 50px;
+        }
     }
     &__title{
         font-size: 2.5rem;
-    font-weight: normal;
+        // font-weight: normal;
+    @include sp{
+        font-size: 2.3rem;
+    }
     }
     &__desc{
         margin-top: 20px;
@@ -31,7 +37,6 @@
         margin-top: 25px;
         li{
             display: inline;
-            border:2px solid $yellow;
             margin: 5px;
             padding: 2px 7px 3px;
             font-size: 1.4rem;
