--- a/src/styles/partials/_works.scss
+++ b/src/styles/partials/_works.scss
@@ -1,7 +1,7 @@
 .works{
     margin-top: 30px;
     h2{
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     }
     &__list{
         margin-top: 20px;
@@ -40,6 +40,9 @@
             margin: 5px;
             padding: 2px 7px 3px;
             font-size: 1.4rem;
+            border-bottom: 1px solid #000;
+            margin: 0 10px;
+            padding: 2px 0px 3px;
         }
     }
     &__linkBtn{
