--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,22 +1,23 @@
 //=== COLORS ===
 $body-bg-color: #ffffff;
 $theme-color: #519392;
-$yellow: #F5CE47;
-$bg-color: #0F1210;
+$yellow: #f5ce47;
+$bg-color: #0f1210;
 $black: #000;
 
 //=== FONTS ===
-$font: 'Nunito',-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
-$headline-font: atrament-web, sans-serif; 
+$font: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+$headline-font: atrament-web, sans-serif;
 $text-font: Helvetica Neue, sans-serif;
 
 //=== SIZES ===
 $content-width: 960px;
 
 //=== ANIMATION ===
-$duration: .2s;
+$duration: 0.2s;
 $distance: 8px;
-$easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
+$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 //=== LETTER ===
 $spacing: 1.75px;
