--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,8 +6,8 @@ $bg-color: #0f1210;
 $black: #000;
 
 //=== FONTS ===
-$font: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
+$font: "Sawarabi Gothic", "Nunito Sans", -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", sans-serif;
 $headline-font: atrament-web, sans-serif;
 $text-font: Helvetica Neue, sans-serif;
 
