--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,93 +7,93 @@
 @import "partials/header";
 @import "partials/footer";
 
-html{
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
-body{
-    font-family: $font;
-    font-size: 1.7rem;
-    letter-spacing: 0.5px;
-    cursor: url('../images/cursor-circle.svg'), auto;	
-    @include sp{
-        font-size: 1.6rem;
-    }
+body {
+  font-family: $font;
+  font-size: 1.5rem;
+  letter-spacing: 0.5px;
+  cursor: url("../images/cursor-circle.svg"), auto;
+  @include sp {
+    font-size: 1.6rem;
+  }
 }
 
-ul{
-    list-style-type: none;
+ul {
+  list-style-type: none;
 }
 
-a{
-    transition: 0.5s;
-    color: $black;
+a {
+  transition: 0.5s;
+  color: $black;
+  text-decoration: none;
+}
+
+.contentWrapper {
+  @include content-wrapper;
+  @include sp {
+    @include content-wrapper--sp;
+  }
+}
+
+.title {
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 50px;
+}
+
+.black-btn {
+  letter-spacing: $spacing;
+  text-align: center;
+  margin-top: 40px;
+  a {
+    padding: 12px 10px 10px;
+    border: 2px solid $black;
+    background-color: #fff;
+    display: inline-block;
     text-decoration: none;
-}
-
-.contentWrapper{
-    @include content-wrapper;
-    @include sp{
-        @include content-wrapper--sp;
+    font-size: 1.5rem;
+    font-weight: bold;
+    @include sp {
+      font-size: 1.2rem;
+      padding: 6px 10px 7px;
     }
-}
-
-.title{
-    text-align: center;
-    padding-top: 50px;
-    margin-bottom: 50px;
-}
-
-.black-btn{
-        letter-spacing: $spacing;
-        text-align: center;
-        margin-top: 40px;
-        a{
-            padding: 12px 10px 10px;
-            border: 2px solid $black;
-            background-color: #fff;
-            display: inline-block;
-            text-decoration: none;
-            font-size: 1.5rem;
-            font-weight: bold;
-            @include sp{
-                font-size: 1.2rem;
-                padding: 6px 10px 7px;
-            }
-            &:hover{
-                animation: btn-hover 0.8s ease 0s forwards;
-            }
-        }
+    &:hover {
+      animation: btn-hover 0.8s ease 0s forwards;
+    }
+  }
 }
 @keyframes down {
-    0% {
-        opacity:  0;
-        top: 30px;
-    }
-    100% {
-        opacity:  1;
-        top: 0;
-    }
+  0% {
+    opacity: 0;
+    top: 30px;
   }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
 
-@keyframes falls{
-    0%{
-      top: -30px;
-    }
-    100%{
-      opacity: 1;
-      top: 0;
-    }
+@keyframes falls {
+  0% {
+    top: -30px;
   }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
 
-  @keyframes btn-hover{
-    0%{
-        border: 2px solid $black;
-        background-color: #fff;
-    }
-    100%{
-        background-color: $black;
-        color: #ffffff;
-    }
+@keyframes btn-hover {
+  0% {
+    border: 2px solid $black;
+    background-color: #fff;
   }
+  100% {
+    background-color: $black;
+    color: #ffffff;
+  }
+}
